--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,9 +15,10 @@ header {
 
 section{
     display: flex;
+    flex-direction: column;
     border: .25em solid lightpink;
-    margin:  0 auto;
-    padding: 15em 3em;
+    justify-content: flex-start;
+    padding: 0 5em;
 }
 
 footer {
@@ -29,4 +30,29 @@ footer {
 
 
 /* Class Selectors */
+.questions {
+    border: .2em solid black;
+    padding: 2em 2em;
+    font-size: 1.5em;
+    font-weight: bolder;
+}
 
+.answers {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+
+}
+.ansBtn {
+    border: .2em solid black;
+    text-align: left;
+    padding: 10px 10px;
+    width: 25em;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 10px 5px;
+    cursor: pointer;
+    border-radius: .5em;
+    background-color: lightblue
+;
+}
