--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,12 @@
 /* Universial selectors */
 *{
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 /* Element Selectors */
 header {
     display: flex;
-    border: .25em solid lightblue;
+    /* border: .25em solid lightblue; */
     margin:  0 auto;
     padding: 1em 3em;
     font-size: 1.5em;
@@ -16,9 +16,8 @@ header {
 section{
     display: flex;
     flex-direction: column;
-    border: .25em solid lightpink;
     justify-content: flex-start;
-    padding: 0 5em;
+    padding: 0 15em;
 }
 
 footer {
@@ -30,6 +29,45 @@ footer {
 
 
 /* Class Selectors */
+.header_btn{
+    font-size: 20px;
+    border: .1em solid black;
+    text-align: left;
+    border-radius: .25em;
+    cursor: pointer;
+    background-color: lightblue;
+}
+
+ .timer {
+    font-size: 20px;
+ }
+.start_card {
+    text-align: center;
+    padding: 2em 2em;
+    font-size: 3em;
+    font-weight: bolder;
+}
+
+.start_p {
+    margin: 0 auto;
+    padding: 2em 2em;
+    font-size: .5em;
+    text-align: left ;
+}
+.start_btn{
+    font-size: 30px;
+    border: .1em solid black;
+    text-align: left;
+    border-radius: .25em;
+    cursor: pointer;
+    background-color: lightblue;
+}
+
+.header_btn:hover, .start_btn:hover {
+    background-color: #d71f1f;
+    color: white;
+}
+
 .questions {
     border: .2em solid black;
     padding: 2em 2em;
@@ -39,6 +77,7 @@ footer {
 
 .answers {
     display: flex;
+    /* display: none; */
     align-items: flex-start;
     flex-direction: column;
 
@@ -53,6 +92,5 @@ footer {
     margin: 10px 5px;
     cursor: pointer;
     border-radius: .5em;
-    background-color: lightblue
-;
+    background-color: lightblue;
 }
