--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,6 +92,13 @@ footer {
     font-size: 2em;
     text-align: center ;
 }
+.highScoreCard {
+    display: none;
+    margin: 0 auto;
+    padding: 2em 0em;
+    font-size: 1em;
+    text-align: center ;
+}
 
 .end_card2 {
     display: none;
